2000-01-18  C. Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>

	* bytecode.cpp:
	* control.cpp:
	* lookup.cpp:
	* symbol.cpp:
	* symbol.h:
	* system.cpp: Debugging malloc libraries are marvelous things.
  	The attached patch fixes five small memory leaks and one instance
 	of delete given a null pointer (not actually incorrect, but bad
 	practice and something memory profiling tools complain heartily
 	about).

2000-01-18  C. Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>

	* ast.cpp: Printing out ASTs involving for-statements may segfault
 	do to a swapped loop bound test.  You only see this if you have
 	more for-initialization expressions than for-update
 	expressions. Patch fixes this problem.

2000-01-18  C. Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>

	* java.g (SwitchBlock): Fixed segfault when compiling certain
 	switch-statement constructs.

2000-01-13 C. Scott Ananian <cananian@alumni.princeton.edu>

	* configure.in: Fix compilation on libc5 based systems.
	
2000-01-14 C. Scott Ananian <cananian@alumni.princeton.edu>

       * option.cpp: Fixed an off-by-one error in a string
       allocation.  Debugging-malloc libraries are a
       Good Thing.
                                                          
2000-01-13  Vadim Zaliva  <lord@crocodile.org>

	* jikes.spec: ChangeLog included in RPM package.

	* Big structure reorganisation. Following files are moved to 'doc'
 	directory: contrib.html jikes.1 jikes.gif jikes.html
 	license.htm news.html news_v1.html

	* src/ChangeLog and ChangeLog merged and result placed in 'doc'
	as well.

2000-01-07 Vadim Zaliva  <lord@crocodile.org>

	* long.cpp: Changed "(BaseLong)*this" into "+(*this)"
        This compiles fine under CodeWarrior.
        It also makes it look logical as a bonus :-)
	(suggested by Martin York <myork@oxmol.co.uk>).

	* option.h:  CodeWarrior does not cope well with the definition
        as it stands. I have commented out the bit it does not